test/tests/operators/match/error_comma_alternatives.txt
error: use `|` to separate match arm alternatives
 --> tests/operators/match/error_comma_alternatives.tql:7:3
  |
7 |   "a", "b" => {
  |   ^^^ 
  |
  = hint: commas are only separators inside record and list patterns
